# showq

./: Makefile  README  README.md  TODO  changes  meson.build  waf  wscript
doc/: howto
src/: about.cc  about.h  app.cc  app.h  audio.cc  audio.h  cue.h  editcue.cc  editcue.h  editfade.cc  editgroup.cc  editmidi.cc  editstop.cc  editwave.cc  file.cc  main.cc  main.h  meson.build  patch.cc  patch.h  pref.cc  pref.h  rcu.h  renumber.cc  renumber.h  showq.gresource.xml  utils.cc  utils.h  uuid_cpp.h  wscript
src/ui/: app.ui  editfade.ui  editgroup.ui  editmidi.ui  editwave.ui  patch.ui  popupmenu.ui  prop.ui  renumber.ui
ui/: about.ui  app.ui  editcue.ui  editfade.ui  editgroup.ui  editmidi.ui  editwave.ui  efaders.ui  epatch.ui  gconvert  patch.ui  pref.ui  prop.ui  renumber.ui  showq.glade  wscript
wafadmin/: Build.py  Configure.py  Constants.py  Environment.py  Logs.py  Node.py  Options.py  Runner.py  Scripting.py  Task.py  TaskGen.py  Utils.py  py3kfixes.py
wafadmin/Tools/: UnitTest.py  ar.py  bison.py  boost.py  cc.py  ccroot.py  compiler_cc.py  compiler_cxx.py  config_c.py  cs.py  cxx.py  d.py  dbus.py  dmd.py  flex.py  gas.py  gcc.py  gdc.py  glib2.py  gnome.py  gnu_dirs.py  gxx.py  icc.py  icpc.py  intltool.py  java.py  kde4.py  libtool.py  lua.py  misc.py  msvc.py  nasm.py  ocaml.py  osx.py  perl.py  preproc.py  python.py  qt4.py  suncc.py  suncxx.py  (+3 more)
